--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -660,7 +660,7 @@ input, textarea {
     border-radius: 4px;
     transition: transform var(--anim-fast), opacity var(--anim-fast), scale var(--anim-fast);
 }
-.btn-close {
+.modal__btn-close {
     position: absolute;
     display: flex;
     align-items: center;
@@ -677,16 +677,16 @@ input, textarea {
     box-sizing: border-box;
     transition: fill var(--anim-fast);
 }
-.btn-close:hover, .btn-close:focus {
+.modal__btn-close:hover, .modal__btn-close:focus {
     fill: var(--select-color);
 }
-.form {
+.modal-form {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
     height: 100%;}
-.modal-title {
+.modal-form__action {
 display: block;
 font-family: var(--main-font);
 font-weight: 700;
@@ -710,7 +710,7 @@ color: var(--main-grey);
 .form-item:not(:last-child) {
     margin-bottom: 10px;
 }*/
-.form-label {
+.modal-form__label {
 display: block;
 font-family: var(--main-font);
 font-style: normal;
@@ -721,7 +721,7 @@ letter-spacing: 0.01em;
 color: var(--main-color);
 margin-bottom: 4px;
 }
-.form-field {
+.modal-form__field {
     position: relative;
     width: 100%;
     margin-bottom: 10px;
@@ -752,7 +752,7 @@ textarea {
     font-family: inherit;
     font-size: inherit;
 }
-.form-comment {
+.modal-form__comment {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 00.01em;
@@ -767,7 +767,7 @@ textarea {
     font: inherit;
     resize: none;
 }
-.form-comment::placeholder {
+.modal-form__comment::placeholder {
     font-family: var(--main-font);
     font-style: normal;
     font-weight: 400;
@@ -775,10 +775,10 @@ textarea {
     line-height: 16px;
     letter-spacing: 1.14;
     color: rgba(117, 117, 117, 0.5);}
-.form-input:active, .form-input:focus, .form-comment:active, .form-comment:focus, .form-input:hover, .form-comment:hover {
+.form-input:active, .form-input:focus, .modal-form__comment:active, .modal-form__comment:focus, .form-input:hover, .modal-form__comment:hover {
     border-color: var(--select-color);
 }
-.form-comment:placeholder {
+.modal-form__comment:placeholder {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -798,41 +798,41 @@ textarea {
     padding-left: 12px;
     padding-right: 12px;
 }
-.check-label {
+.modal-form__check-label {
     display: flex;
     align-items: center;
     position: relative;
 }
-.checkbox-input {
+.modal-form__checkbox-input {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     position: absolute;
 }
-.check-icon {
+.modal-form__check-icon {
     display: inline-block;
     margin-right: 8px;
     border-radius: 4px;
     border: 2px solid var(--bleak-text);
     transition: background-color var(--anim-fast), color var(--anim-fast), border var(--anim-fast), transform (--anim-fast);
 }
-.checkbox-input:checked + .check-icon {
+.modal-form__checkbox-input:checked + .modal-form__check-icon {
     background-color: #2196F3;
     color: #FFFFFF;
     border: none;
 
 }
-.check-desc, .check-link {
+.modal-form__check-desc, .modal-form__check-link {
     font-family: var(--main-font);
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;}
-.check-desc{
+.modal-form__check-desc{
     color: #757575;
 }
-.check-link {
+.modal-form__check-link {
     margin-left: 3px;
     text-decoration-line: underline;
     color: var(--select-color);
@@ -844,7 +844,7 @@ textarea {
 }
 /*Кнопка заказа услуги*/
 /*Кнопка*/
-.request-btn {
+.modal-form__request-btn {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -864,7 +864,7 @@ textarea {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);*/
     transition: background-color var(--anim-fast), border-color var(--anim-fast), box-shadow var(--anim-fast);
 }
-.request-btn:hover, .request-btn:focus {
+.modal-form__request-btn:hover, .modal-form__request-btn:focus {
     background-color: var(--activ-btn);
     border-color: var(--activ-btn);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
