--- a/SASS/base/_base.scss
+++ b/SASS/base/_base.scss
@@ -11,4 +11,26 @@ body {
     padding-top: 80px;
 }
 
-
+.main__hero {
+    max-width: 1600px;
+    height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 200px;
+    padding-top: 200px;
+}
+.main__peculiarities {
+    padding-bottom: 94px;
+    padding-top: 94px;   
+}
+.main__performance {
+    padding-bottom: 94px;  
+}
+.main__team {
+    padding-bottom: 94px;
+    padding-top: 94px;   
+}
+.main__clients {
+    padding-bottom: 94px;
+    padding-top: 94px;
+}
