--- a/SASS/components/Portfolio/_filter.scss
+++ b/SASS/components/Portfolio/_filter.scss
@@ -21,9 +21,11 @@
     color: var(--main-grey);
     background-color: var(--section-background);
     transition: color var(--anim-fast), background-color var(--anim-fast), box-shadow var(--anim-fast);
+
+    &:hover, &:focus {
+      color: var(--white-text);
+      background-color: var(--select-color);
+      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+      /*border-color: #2196F3;*/}
  }
- .filter__btn:hover, .filter__btn:focus {
-    color: var(--white-text);
-    background-color: var(--select-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    /*border-color: #2196F3;*/}
+ 
