--- a/SASS/components/Portfolio/_portfolio.scss
+++ b/SASS/components/Portfolio/_portfolio.scss
@@ -27,10 +27,12 @@
      position: relative;
      display: block;
      transition: box-shadow var(--anim-fast);
+
+     &:hover, &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);   
+    }
  }
- .project__link:hover, .project__link:focus {
-     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);   
- }
+ 
  .project__list {
      list-style: none;
      display: flex;
