--- a/SASS/components/_header-contact.scss
+++ b/SASS/components/_header-contact.scss
@@ -1,3 +1,6 @@
+.header-contact {
+    display: flex;
+}
 .header-contact__link {
     display: block;
     padding-top: 32px;
@@ -21,10 +24,9 @@
     font-weight: 500;
     color: var(--main-color);
     transition: color var(--anim-fast);
+
+    &:hover, &:focus {
+        color: var(--select-color);
+    }
 }
-.header-contact__link:hover, .header-contact__link:focus {
-    color: var(--select-color);
-}
-.header-contact {
-    display: flex;
-}
+
