--- a/SASS/components/_hero.scss
+++ b/SASS/components/_hero.scss
@@ -2,20 +2,12 @@
  .hero {
     text-align: center;
     background-image:
-linear-gradient( to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-url(../images/Hero.jpg);
-background-color: var(--footer-background);
-background-repeat: no-repeat;
-background-position: center;
-background-size: cover;   
-}
-.main__hero {
-max-width: 1600px;
-height: 600px;
-margin-left: auto;
-margin-right: auto;
-padding-bottom: 200px;
-padding-top: 200px;
+    linear-gradient( to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/Hero.jpg);
+    background-color: var(--footer-background);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;   
 }
 
 .hero__title {
@@ -29,6 +21,28 @@ line-height: 1.36;
 letter-spacing: 0.06em;
 text-transform: uppercase;
 margin-bottom: 30px;
-color: var(--white-text); }
+color: var(--white-text); 
+}
+
+/*Кнопка*/
+.hero__btn {
+    padding: 10px 32px;
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    text-align: center;
+    border-radius: 4px;
+    border: 0;
+    border-color: var(--select-color);
+    color: var(--white-text);
+    background-color: var(--select-color);
+    transition: background-color var(--anim-fast), border-color var(--anim-fast);
+
+    &:hover, &:focus {
+        background-color: var(--activ-btn);
+        border-color: var(--activ-btn);
+    }
+}
 
 
