--- a/SASS/components/modal/_modal-form.scss
+++ b/SASS/components/modal/_modal-form.scss
@@ -3,41 +3,30 @@
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    height: 100%;}
+    height: 100%;
+}
 .modal-form__action {
-display: block;
-font-family: var(--main-font);
-font-weight: 700;
-font-size: 20px;
-line-height: 1.15;
-text-align: center;
-letter-spacing: 0.03em;
-padding: 0;
-margin-bottom: 12px;
-color: var(--main-grey);
+    display: block;
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    padding: 0;
+    margin-bottom: 12px;
+    color: var(--main-grey);
 }
-/*
-.form-list {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;}
-.form-item {
-   
-    margin-top: 12px;
-}
-.form-item:not(:last-child) {
-    margin-bottom: 10px;
-}*/
 .modal-form__label {
-display: block;
-font-family: var(--main-font);
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 1.17;
-letter-spacing: 0.01em;
-color: var(--main-color);
-margin-bottom: 4px;
+    display: block;
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: var(--main-color);
+    margin-bottom: 4px;
 }
 .modal-form__field {
     position: relative;
@@ -48,7 +37,6 @@ margin-bottom: 4px;
 .modal-form__icon {
     position: absolute;
     margin-left: 12px;
-    /*margin-right: 12px;*/
     padding: 6px;
     top: 50%;
     left: 0;
@@ -65,6 +53,10 @@ margin-bottom: 4px;
     border-radius: 4px;
     font: inherit;
     transition: background-color var(--anim-fast), border-color var(--anim-fast);
+
+    &:active, &:focus, &:hover {
+        border-color: var(--select-color);
+    }
 }
 
 .modal-form__comment {
@@ -81,18 +73,21 @@ margin-bottom: 4px;
     background-color: transparent;
     font: inherit;
     resize: none;
+    &::placeholder {
+        font-family: var(--main-font);
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 1.14;
+        color: rgba(117, 117, 117, 0.5);
+    }
+    &:active, &:focus, &:hover {
+        border-color: var(--select-color);
+    }
 }
-.modal-form__comment::placeholder {
-    font-family: var(--main-font);
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 1.14;
-    color: rgba(117, 117, 117, 0.5);}
-.modal-form__input:active, .modal-form__input:focus, .modal-form__comment:active, .modal-form__comment:focus, .modal-form__input:hover, .modal-form__comment:hover {
-    border-color: var(--select-color);
-}
+
+
 .modal-form__comment:placeholder {
     font-family: 'Roboto';
     font-style: normal;
@@ -135,8 +130,8 @@ margin-bottom: 4px;
     background-color: #2196F3;
     color: #FFFFFF;
     border: none;
-
 }
+
 .modal-form__check-desc, .modal-form__check-link {
     font-family: var(--main-font);
     font-style: normal;
@@ -153,12 +148,7 @@ margin-bottom: 4px;
     color: var(--select-color);
 }
 
-/*.topic-option input[type="checkbox"] {
-    width: 16px;
-    height: 15px;
-}
 /*Кнопка заказа услуги*/
-/*Кнопка*/
 .modal-form__request-btn {
     display: block;
     margin-left: auto;
@@ -178,9 +168,10 @@ margin-bottom: 4px;
     /*transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);*/
     transition: background-color var(--anim-fast), border-color var(--anim-fast), box-shadow var(--anim-fast);
+    &:hover, &:focus {
+        background-color: var(--activ-btn);
+        border-color: var(--activ-btn);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    }
 }
-.modal-form__request-btn:hover, .modal-form__request-btn:focus {
-    background-color: var(--activ-btn);
-    border-color: var(--activ-btn);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
+
