--- a/SASS/components/modal/_modal.scss
+++ b/SASS/components/modal/_modal.scss
@@ -2,10 +2,6 @@
 
 
 .modal {
-    /*display: flex;
-    flex-direction: row-reverse;
-    /*justify-content: space-between;
-    align-items: flex-start;*/
     position: absolute;
     opacity: 1;
     top: 50%;
@@ -13,8 +9,6 @@
     transform: scale(1) translate(-50%, -50%);
     padding: 40px;
     width: 528px;
-    
-    /*padding: 8px 8px;*/
     background-color: var(--main-background);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -36,9 +30,11 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
     transition: fill var(--anim-fast);
+
+    &:hover, &:focus {
+        fill: var(--select-color);
+    }
 }
-.modal__btn-close:hover, .modal__btn-close:focus {
-    fill: var(--select-color);
-}
+
 
 @import "./modal-form";
